--- a/index.html
+++ b/index.html
@@ -1383,8 +1383,8 @@ Boğaziçi Üniversitesi öğrencileri içindir.                                
 </stage>
 <stage id="responseDiv" class="container" style="display: none;">
     <section>
-    <h2>Kayıdınız için teşekkürler. Gelen Mail ve Smsteki yönergeleri takip ederek ödemenizi ve başvurunuzu tamamlayabilirsiniz.</h2>
-    <h2><a id="linkPay" href="https://go.compec.org/dtbiletgenel">Ödemek İçin Tıklayın.</a></h2>
+    <h2 style="letter-spacing: unset;">Kayıdınız için teşekkürler. Gelen Mail ve Smsteki yönergeleri takip ederek ödemenizi ve başvurunuzu tamamlayabilirsiniz. Aşağıdaki linke basarak da ulaşabilirsiniz</h2>
+   <div class="container"> <h2><a id="linkPay" class=" btn btn-light" href="https://go.compec.org/dtbiletgenel">Ödemek İçin Tıklayın.</a></h2></div>
 </section>
 </stage>
 
@@ -1769,7 +1769,7 @@ Boğaziçi Üniversitesi öğrencileri içindir.                                
                 } 
             }
             else {
-                
+
             }
             } 
             grecaptcha.reset();
