--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                 <div class="sponsor gold">
 
                     <a   target="_blank" href="https://mobiler.dev/">
-                        <img src="/assets/partners/Screen Shot 2019-11-08 at 09.18.23.png" alt="">
+                        <img src="/assets/partners/mobiler.png" alt="">
                     </a>
 
                 </div>
