--- a/index.html
+++ b/index.html
@@ -524,12 +524,12 @@
                             </div>
                         </div>
                         <div class="image">
-                            <img src="assets/partners/wbh1necqgipohw1nxk6q_400x400.jpeg" alt="">
+                            <img src="assets/partners/dorukhan.jpg" alt="">
                         </div>
                         <div class="text">
-                            <h3 class="item-title">Big Data</h3>
-                            <h4 class="speaker-name">Hüsnü Şensoy</h4>
-                            <h4 class="speaker-title">Founder and VLDB Expert@Global Maksimum</h4>
+                            <h3 class="item-title"> Showcase Your Art: Building A Data Science Portfolio </h3>
+                            <h4 class="speaker-name">Dorukhan Afacan </h4>
+                            <h4 class="speaker-title">Data Scientist</h4>
                         </div>
                     </div>
                     <div class="program-item">
@@ -604,6 +604,32 @@
                         </div>
                         <div class="text">
                             <h3 class="item-title">Chatbot Development: Building A Conversational AI Bot with Sestek</h3>
+                        </div>
+                    </div>
+                    <div class="program-item">
+                        <div class="time">
+                            <div>
+                                09<br>
+                                00
+                            </div>
+                            <hr>
+                            <div>
+                                10<br>
+                                00
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="assets/partners/dorukhan.jpg" alt="">
+                            <img src="assets/partners/wbh1necqgipohw1nxk6q_400x400.jpeg" alt="">
+
+                            <img style="" src="/assets/partners/global.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h3 class="item-title">Adventures of a Data Scientist & Data Engineer
+                                Workflow Tutorial of a Machine Learning Project</h3>
+                                <h4>Dorukhan Afacan - Data Scientist</h4>
+                                <h4>Hüsnü Şensoy - VLDB Expert</h4>
+
                         </div>
                     </div>
         </div>
