--- a/index.html
+++ b/index.html
@@ -611,6 +611,43 @@
                     </div>
         </div>
 
+<!-- MODAL -->
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" onclick="openModal()">
+    Launch demo modal
+  </button>
+  <script>
+  var openModal=(title,text)=>{
+      $("#modaltitle").text(title);
+      $("#modaltext").text(text);
+    $('#exampleModalLong').modal('show')
+    
+
+
+  }
+  </script>
+  <!-- Modal -->
+  <div class="modal bg-primary" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content bg-dark">
+        <div class="modal-header">
+          <h5  class="modal-title" id="modaltitle"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span  aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div id="modaltext" class="modal-body bg-dark">
+          fsdfsdasdasdasdasd
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+         </div>
+      </div>
+    </div>
+  </div>
+  
+
+
     </section>
     <section id="partners">
         <div class="container container-wide">
