--- a/index.html
+++ b/index.html
@@ -1832,7 +1832,7 @@ Boğaziçi Üniversitesi öğrencileri içindir.                                
                 } 
             }
             else {
-
+                $("#linkPay").attr("href","https://go.compec.org/dtbiletgenel")
             }
             } 
             grecaptcha.reset();
