--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
                         </div>
                         <div class="text">
                             <h3 class="item-title">ING</h3>
+                            <h3 class="item-title">Bankacılık Sektöründe Datascience Uygulamaları </h3>
+
                         </div>
                     </div>
                     <div class="program-item">
@@ -572,7 +574,7 @@
                         </div>
                         <div class="text">
                             <h3 class="item-title">Oktay Arslan</h3>
-                            <h4 class="speaker-name">AutoPilot Engineer At Tesla </h4>
+                            <h4 class="speaker-name">Yazılım Mühendisi @ A<sup>3</sup> AirBus </h4>
                             <h4 class="speaker-title">Otonomi ve Makine Ogrenmesi ( Telekonferans ) </h4>
                         </div>
                     </div>
