--- a/index.html
+++ b/index.html
@@ -593,12 +593,12 @@
                     <div class="program-item">
                         <div class="time">
                             <div>
-                                09<br>
+                                10<br>
                                 00
                             </div>
                             <hr>
                             <div>
-                                10<br>
+                                13<br>
                                 00
                             </div>
                         </div>
@@ -608,6 +608,68 @@
                         </div>
                         <div class="text">
                             <h3 class="item-title">Chatbot Development: Building A Conversational AI Bot with Sestek</h3>
+                        </div>
+                    </div>
+                    <div class="program-item">
+                        <div class="time">
+                            <div>
+                                14<br>
+                                00
+                            </div>
+                            <hr>
+                            <div>
+                                17<br>
+                                00
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="assets/partners/ulgen.jfif" alt="">
+                            <img style="" src="/assets/partners/sestek-logo-large.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h3 class="item-title">NN ile kelime ayırma örnek deep learning modelinin geliştirilmesi  </h3>
+                        </div>
+                    </div>
+                    <div class="program-item">
+                        <div class="time">
+                            <div>
+                                10<br>
+                                00
+                            </div>
+                            <hr>
+                            <div>
+                                13<br>
+                                00
+                            </div>
+                        </div>
+                        <div class="image">
+                            
+                            <img style="" src="/assets/partners/turkcell-logo.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h3 class="item-title">NLP</h3>
+                            <h4>Turkcell Yapay Zeka Ekibi</h4>
+
+                        </div>
+                    </div>
+                    <div class="program-item">
+                        <div class="time">
+                            <div>
+                                14<br>
+                                00
+                            </div>
+                            <hr>
+                            <div>
+                                17<br>
+                                00
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img style="" src="/assets/partners/turkcell-logo.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h3 class="item-title">Image Recognition  </h3>
+                            <h4>Turkcell Yapay Zeka Ekibi</h4>
                         </div>
                     </div>
                     <div class="program-item">
