--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,7 @@ Boğaziçi Üniversitesi öğrencileri içindir.                                
                         <strong>Muhammed Emin Deniz</strong> <br>
                         <em>Compec Ar-Ge Direktörü</em> <br>
                         <a class="mailFont" href="mailto:emin.deniz@compec.org" target="_top">emin.deniz@compec.org</a> <br>
-                        <a href="tel:+905364433684" target="_top">+90 536 443 36 84</a>
+                   <!-- Ekip iletişim bilgileri    <a href="tel:+905364433684" target="_top">+90 536 443 36 84</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
@@ -1544,7 +1544,7 @@ Boğaziçi Üniversitesi öğrencileri içindir.                                
                         <strong>Cansu Kocabaş</strong> <br>
                         <em>Compec Dev-Team Lideri</em> <br>
                         <a class="mailFont" href="mailto:cansu.kocabas@leader.compec.org" target="_top">cansu.kocabas@leader.compec.org</a> <br>
-                        <a href="tel:+905559939410" target="_top">+90 530 965 06 06</a>
+                     <!--   <a href="tel:+905559939410" target="_top">+90 530 965 06 06</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
@@ -1555,7 +1555,7 @@ Boğaziçi Üniversitesi öğrencileri içindir.                                
                         <strong>Halil Salih Orhan</strong> <br>
                         <em>Compec Dev-Team Lideri</em> <br>
                         <a class="mailFont" href="mailto:salih.orhan@leader.compec.org" target="_top">salih.orhan@leader.compec.org</a> <br>
-                        <a href="tel:+905316560971" target="_top">+90 531 656 09 71</a>
+                    <!--     <a href="tel:+905316560971" target="_top">+90 531 656 09 71</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
@@ -1566,7 +1566,7 @@ Boğaziçi Üniversitesi öğrencileri içindir.                                
                         <strong>Müge Keçeci</strong> <br>
                         <em>Compec Dev-Team Lideri</em> <br>
                         <a class="mailFont" href="mailto:muge.kececi@leader.compec.org" target="_top">muge.kececi@leader.compec.org</a> <br>
-                        <a href="tel:+905071913564" target="_top">+90 507 191 35 64</a>
+                     <!--    <a href="tel:+905071913564" target="_top">+90 507 191 35 64</a>-->  
                     </div>
                 </div>
             </div>
