--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@ Boğaziçi Üniversitesi öğrencileri içindir.                                
         </div>
     </section>
     
-    <section 
+    <section style="display: none;"
     id="registrationForm"><!--display:none!ı sil-->
         <div class="container container-wide">
             <h1>Kayıt Formu </h1>
