kayıt sona erdi

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div><a data-scroll href="#program" class="nav-link">Program</a></div>
             <div><a data-scroll href="#partners" class="nav-link">Sponsorlar</a></div>
-            <div><a data-scroll href="#registerAll" class="nav-link">Kayıt</a></div>
+            <!-- <div><a data-scroll href="#registerAll" class="nav-link">Kayıt</a></div> -->
             <div><a data-scroll href="#contact" class="nav-link">İletişim</a></div>
             <div><a data-scroll  href="./2018/index.html" class="nav-link">DataCamp'18</a></div>
 
@@ -116,9 +116,9 @@
                             <h3>Etkinliğe Kalan Süre</h3>
                             <h3 id="countdownTimer"></h3>
                             <h3>23 - 24 Kasım</h3>
-                            <div class="btn btn-outline-primary">
+                            <!-- <div class="btn btn-outline-primary">
                                 <a data-scroll href="#registerAll" class="nav-link text-warning font-weight-bold text-wrap" style="font-size: 3rem;">Kayıt için Tıkla!</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -978,7 +978,7 @@
     </section>
     <section id="register">
         <div class="container container-wide register-container">
-           <h1 style="text-align: center; font-size:30px;">Kayıtlar Bitmek Üzere!!! <br class="br-mobile"> </h1>
+           <h1 style="text-align: center; font-size:30px;">Kayıtlar Sona Erdi!!! <br class="br-mobile"> </h1>
             <p>Etkinliğimizi beklerken bizi sosyal medya hesaplarımızdan takip edebilirsin.</p>
             <a target="_blank" href="https://www.youtube.com/channel/UCNo7VY-ZXDgIGF0n2qlH66A">
                 <div class="youtube-btn">
@@ -1003,7 +1003,7 @@
         </div>
     </section>
 
-<stage id="registerAll" style="">
+<stage id="registerAll" style="display: none;">
 
     <section>
         <div class="container container-wide">
