--- a/index.html
+++ b/index.html
@@ -1822,7 +1822,7 @@ Boğaziçi Üniversitesi öğrencileri içindir.                                
             // If the count down is finished, write some text
             if (distance < 0) {
                 clearInterval(x);
-                document.getElementById("countdownTimer").innerHTML = "The event started";
+                document.getElementById("countdownTimer").innerHTML = "DataCamp Başladı";
             }
         }, 1000);
         // Source: https://www.w3schools.com/howto/howto_js_countdown.asp
