--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                             <img src="https://media.licdn.com/dms/image/C4E03AQHBut7a3NB3jw/profile-displayphoto-shrink_200_200/0?e=1578528000&v=beta&t=20IHLkwm0nWdVYzxhFdGAn08kpJtJfyLMFmJ4Jj82nQ" alt="">
                         </div>
                         <div class="text">
-                            <h3 class="item-title">Otonom Sistemlerde Makine Öğrenmesi Devinimi</h3>
+                            <h3 class="item-title">Otonom Sistemlerde Makine Öğrenmesi Devrimi</h3>
                             <h4 class="speaker-name">Oktay Arslan</h4>
                             <h4 class="speaker-title">Yazılım Mühendisi @ A<sup>3</sup> AirBus </h4>
                         </div>
