--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="header-container">
             <div class="header-text">
                 <!--<img class="header-logo" src="assets/RGB-LogoV5.png"> -->
-                <h1 class="hero-title">Boğaziçi DataCamp'19</h1>
+                <h1 class="hero-title">Boğaziçi DataCamp'20</h1>
                 <div class="header-detail-text">
                     <div style="font-size: 1.1wh;">
                     <p>Boğaziçi Üniversitesi Bilişim Kulübü Compec tarafından düzenlenen ve bu sene ikinci kez gerçeklesecek olan Boğaziçi DataCamp’e davetlisiniz!</p>
@@ -124,7 +124,7 @@
                     <div style="font-size: 1.1wh;" style="transform: translateY(10px)">
                         <h3>Etkinliğe Kalan Süre</h3>
                         <h3 id="countdownTimer"></h3> <!--Kalan süre için 4 Kasım 00:00'ı baz aldım, değiştirmek isterseniz fonksiyon aşağıda. "Nov 4, 2020 00:00:00" şeklinde aratabilirsiniz.-->
-                        <h3>23 - 24 Kasım</h3>
+                        <h3>4 - 11 Kasım</h3>
                         <!-- <div class="btn btn-outline-primary">
                             <a data-scroll href="#registerAll" class="nav-link text-warning font-weight-bold text-wrap" style="font-size: 3rem;">Kayıt için Tıkla!</a>
                         </div> -->
@@ -148,9 +148,9 @@
                     Boğaziçi Datacamp veri bilimi ve onun iş dünyasındaki uygulamalarının konuşması ve katılımcıların workshoplarla uygulayarak öğrenmesi üzerine olan bir zirvedir.  </p>
                 <h3>Yer - Tarih</h3>
                 <p>
-                    Boğaziçi Üniversitesi <br>
-                    23 Kasım Workshop: Bilgisayar Mühendisliği Binası <br>
-                    24 Kasım Zirve: Albert Long Hall
+                    Online<br>
+                    4 - 11 Kasım Workshop<br>
+                    7 - 8 Kasım Zirve
                  
                 </p>
             
@@ -183,24 +183,51 @@
         </div>
         <div class="container "> <!--KOPYALAMANIN BAŞI, BURADAN SONRASI GİDECEK. Discord'a toplantıda attığım link ile yapılacak. Bundan farklı görünürse, sıkıntı olursa yazın.-->
             <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
-            <div class="pa-carousel-widget" style="width:100%; height:480px; display:none;"
-                data-link="https://photos.app.goo.gl/zhGfzNVU1fBvjAuW7" data-title=""
-                data-description="13 new photos added to shared album" data-delay="2" data-background-color="transparent">
-                <object data="https://lh3.googleusercontent.com/L4jkuVQrPKR0oZWuYRvYwQp24NGeJVF1jfCqWKU3qeRBXtdXHf9mVrjE95eR8UeT2guH6xuKHma3ZYS8vpyZXH7lbPjKf39WaDCySz3L99UE0ir-26mFC1vf3hsh8ua52UmEv1EEVA=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/AFJZPbviAsAbfGM5W8PqDfs0DqHyLCZ7KWctOb7aI2MEAXmVd-Pp2XpV5cifG75zD-hIr3QyycEbeo1gAJ6vWuKphpgGgDcTdfMgNZNKdQhq6SWLmTjduvCxWNGqeYcw-dib16D9MQ=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/Oc-3f9SjikqWYQbqKHl1zPknZyj2UW4L4-RwRfKq1Z0mjsd9SdXbA5QzPvb9fBGyAhDECb_zWIvPe7XD9w0quksoZX1Gb2Ec98DMZKow970foEXiGe_BUxTKq2I7zmFupDIE-OYjpg=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/TT4BSuq88pJn2gei5LmFsxNWcNEUTmps1EoYy1lugZUzuYU9c3w7n35mIvySEzsw-yxESw6RSMPHaX7FnA002RcwJCBnU8v05BvXLXDNWWNcXIdc2QifRKTFlnTKx2sbmOZADjFPxw=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/yF0WEVzjXHl2YIOox8A3Zg0_JYWgovLLY6vld6_28s_IB2-QYAprIJZ30ospKfJIX2Hzjk0afp1pzsIsBL5Dqpaz1s0StqxI59Kjfjs35oUKOlLw3ChwEerBBDIIYaQCq9CsOkoJXw=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/Te9D424P9hfHsAB0by4RjSlye0vXtXNei2Qs1ggpcQDo42BmgX5CjRMlxvRpZf784rN3NJDxNL3QYzNBkotBQMg9sA-QKUF8JzDURtX5Z_VFw0bvmbPDkgHvXaYEqOteaNmwr8MQrA=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/m8sDPIhN4HnAmietLa_LVp069sVw9u5Xqccd1wSlglQ2BKQjV0CFPGpHGW9F8Ik1U7cQ_ti516kCqLVBaRbVcc94fGA1VEqR-rnYHT-1sl622twrCN1rIfOv4JLUbfgIJayPo5slPg=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/vHcpl1JOKHDPvKyoNfPlsrLtpJCsqsSKVeXugmy73uNgT-aGlbqL73fBIGwc3u9n-kYxcDgDq8nDB3FnIWC3daZhLFINtlwmKqgc4PSzJMT6s74gdUnPO4BAkL_BqM5cjMW760oIyA=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/jbu3IbM1bd63rrEuCP0zf9hWo04UwcBhT8jwLfREf-MM5pA2nqqljfNg5lJ4q92880BuZ2vmPQ35YmIgkNB48AEFbOd8lfGz_4DFu1g8L3-Ix-1jnyZsqPSPenxfcRxyh5bZd4mMfA=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/0eEIS14uItj0TmqRP4JywPGMX-Q9Z5jxRKNLCLNcftngv0QWSWKRG5aRPXoxG7wYCY5ZxH1I3SRjmr2mCPSYyTfoc8dJqSpxj8UJOHQ_RDb4CGIbuCBWrsJv7de211Xyq3GAreGJaw=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/Ej8R5tMbRUI_bkzZ0Xv-th3lXDEDQXkQllGUm6N55CKh7rMBBCMn4BkpaeykJLASfCrPIKTQCvEVhpFGZXQ0JYDtlutmNRQFtnrAc5zAgG1ywztF7NVtfHZF5IrPgDTj5WuUl7P6zQ=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/0hIWnw8wJq5vs-cRzRAl5kKaLwvBoY2D0rq-iegEceoLYrzEvXhTsE2dorePOJaRmCe7ohRWOlxTKtN2I06XeUEJwwQKxC-PzKUrxRSLb5Jb57nUjyX2pEGHPlJUDy1KoOFbOxYIyg=w1920-h1080"></object>
-                <object data="https://lh3.googleusercontent.com/97xft9ERelqvit03nJ59mXmvsddu5yr3LfGdBrXvvSrDLtPy0HvJzafyOsSZOG6dNHdfBwbJgfYlItK_9-FbLHD9CyjdtYyNECNqXFVJVioQmwAvjfznxuWvMcLNZCgKbOVxUpOuAQ=w1920-h1080"></object>
-
+            <div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
+                data-link="https://photos.app.goo.gl/2cgwv5BPUncTXkYt7" data-title="Datacamp"
+                data-description="20 new photos added to shared album">
+                <object
+                    data="https://lh3.googleusercontent.com/2on3uC4G23SZ-W1vaZl4-QFUOIUnWFl2FXXP3JilcQ9Ybf2HAtvq63nu6fUemVjDJFrXLFG8WbgE8lT76bwrBK-3hYowuRtxcYT556YE9Qw5OW8lUvYTW8TTq_gkAm7KWcKrbB8Uwg=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/B5m6RkpRUVQqetGSmk-wsxQToyiBrvKf2L8sQGuatu_O__ej7nNYLLUSnlQbxUOtXRbtLu8y2ZbJFK3kV0dvYyFtpySyiIVgEc1bMLW4iMAqpp_1_fDN7zblviBfAV1ZzHZb-Mrwig=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/bsiI_HjXJCZ8SBvKvJ0rhvWux0sEE7LgJIz6WTpuXKefb5pKLxL2cL9IgoPcpFj_YwQzqXMHRp9kMcU5AZuOY6En4GE4ZaZidU6hO1TEeJ4-FiUaWknx2HxTKmiUICC-Er9jYusPdw=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/xTJ1Q8J4fvCD0nJYdR9_my-q0zAq6yiw9PAeeYPn9WnBRrlKeuUf9bL0i227La2SaC9reBzZqTJPhYOh1vAvMDZSQzRvxmMBWX5V6DRGrWuWIRyGtNabJH5Sc6Wa_47LEsbZRi1qkw=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/H7i6zI9Xm5IVSs6aPhNT9cYMd6MuEsQ3qsR6nHArL6WVV3HLwwV7mRKEFlldfazz_DWcp1Jd-hIpN7ErfbB-ZJfgswFJWo3JCDNY-aU3oFhv7NYfvZdBsZ1rbqN1CFxYYZR95OrJ3w=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/V5Ioa_wOhbaJ3wU9kcKxR5rYbCHrJpQOxm2awE_jVeOqCSuA1exTeS3xyZP5dxIEvXoymI59K550XH_Oz7UvPMbcsTwuTT5P6x-UaPWTMD91jmwCMX7tXYi7HEy_mamJYf0FQucbQg=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/hvPMIfeP5UjsX3JC5GZywM1ML6g3FgOd__-cB3BDrepT9oIKkrxiKHKs6d4V_a_OAH_VUpm22L42uIyQiY2PRl2s05XK7nOodn7y34WWCdL2AEWr-G6meuaSib2kYLvsPrgDXu9JZQ=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/ri04i9skyO9FNRezOW-dsME_siZkOCQpw1fpplvT_L6n9c4BIowYsrL-gRZcE1j_Wea2vh7cbrduZ5qqdKw-gO2bvTfsFnkPZ7VrRgWrKVuzfDn0aOgSkf125iewouivajd2tFOsAA=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/OnIYN76J0jnpdad11j_9LjIeV56Mb0-sNJyFFZ4-n8sDwil90RhildczBoD1jvMTlHXxUW_9tVSCxkNB4GREEk-GhtUFSZjyWbj4UO8IDoChcy0u_Ue8Ydn03KTXbwYPnXElI6MvSw=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/EVmR2Mr1XNYJVm5T76xYt55zmhQLP5rHB0khnhX9yLeSDYQrDCLuLzZklaFhIHFzc_b8cJ1o5uxSQhemvP60QjTbetSFKJildU77H84VUp9-p-xRzzkmHplJ3acyf5w-9Hgcf7wYLQ=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/dpmJ-6LHOFAmO--yfknSzdHBS2GJLJmD8P1H7rRzxoeoUGQExbsXfYdwAcyMQM-1NztWhjJvA_zxalWqQVsKnTX7h8O2e8CxAQ2iVMoNEtCYL6Rs-VkWMjZGhrcOqa7uYTPu6ne7Fg=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/WrZnqaEO-MLu20ctW5FsOnonQBYwRudUXaQn9TZbsEY42pelVxm9Ixph8FqRyYAK8LX0GenAPoy8d1ib3GcNC6j1r3r4rfCbEnk_JdEwhAhhz8uSz4n5xRwoeS_2nwI0-ntsPEao4Q=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/W7em66Tev0sSMJGaqTQYd-IN1LVMRrZ5vmTvyUQHx4JzWCO2hC20JMmGXRqrlCoG8c_8jAxazL7H0bGdqsjgkYvuFa1YOyFgeTLYollXmAv5NZFFt46-Ga7fDv1y1ojLfWqD_VS97w=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/asxae3_U7Njw2sk-ThbXbs24SCw9jn8du1bxuqWuMjeuT4wkbQd33U3ypTIHwu3nxsT2nHynOwja4xUneT939C6xKLssOQ5LZRqihXBNCJKYi6HME-9muUmhq9ZgdLP7RC5IR-jTmw=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/skipFUrLizu3usX3tJ7LNgXGGvQtK58o8yAFrkxmPPfN1wq7CJf2-cA2EDHJd35w8Gb3Zaeenc5DJC572qxd1bBkn4sV9FkYKQdv5eun28SkaIRtnCnr-hMeBg-LWMPn_i6VFiGi5g=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/dvww3PPKNNNgNyySSXk4prmlVcgP01SVNfhYoXxqoPBpKrsvB2b8xmKHncOErWX9UMNBrlechxGi4Xh627tGSIajTiGyviCMdeCEw_PI3LEaL1TOE8k60djoMrkmQ3TJ8pKys7YuUQ=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/lMCrqF8NUVj34vcap-y-g9AOo9wEBgsNL7UbK-5hL2bOXO-gkjCOIYL9Zh2Ek69k-eLx5LCPbsyINSd4_4ztlIWsB_p5xQbHJXli6XLabz1nvGliO2_EmTH21O-IGpWklSiFsjDuBw=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/ysfpNANS3BZTlll8JmwoCqjOYpt_aVnB2IbXO4P6_VLeu83A0JV0-iOwRx36FFD4diSWZ-YfeO4CiOWat8bPGskPRaWIHxpydHIHQjpQt75HbT6o-M2hrCwjsYcfOGo7Zsozm_kdHA=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/AhhQdXOgWprTsMeQ6PlDvHhD4yNUvNe9rHSmcBdVyBcAw5Jj6w2CA97n2s1RBGmgGyr2P5zbg-CLHWINbLdqSAd3gG0dFlIs8kdPQL7kUHtArLENsDqCGpJctIUqAor7voJS2D2QYg=w1920-h1080"></object>
+                <object
+                    data="https://lh3.googleusercontent.com/8b5wfgc2I-D9ezLrIjsrRQKRG-uaYz7v_H1awm-XzVewaVH2KCW_vyBuIBL4UOH8Rk7lRPflnEzAa5YfK1Cc9qWNgV6eJZ0LpoBPKaC8f3AKlB-_o1MKQXVgB3cSdTVIUQEn5ShDYg=w1920-h1080"></object>
             </div>
+
             <!--BURAYA KADAR, ARASININ YERİNE KOY-->
         </div>
     </section>
@@ -213,45 +240,45 @@
             <div class="team-container clearfix text-break">
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/Emin.jpg" alt="Muhammed Emin Deniz">
+                        <img src="assets/team/enes.jpeg" alt="Enes Döke">
                     </div>
                     <div class="text">
-                        <strong>Muhammed Emin Deniz</strong> <br>
-                        <em>Compec Ar-Ge Direktörü</em> <br>
-                        <a class="mailFont" href="mailto:emin.deniz@compec.org" target="_top">emin.deniz@compec.org</a> <br>
+                        <strong>Enes Döke</strong> <br>
+                        <em>DataCamp Proje Direktörü</em> <br>
+                        <a class="mailFont" href="mailto:enes.doke@compec.org" target="_top">enes.doke@compec.org</a> <br>
                    <!-- Ekip iletişim bilgileri    <a href="tel:+905364433684" target="_top">+90 536 443 36 84</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/cansu.jpeg" alt="Cansu Kocabaş">
+                        <img src="assets/team/irem.jpg" alt="İrem Urhan">
                     </div>
                     <div class="text">
-                        <strong>Cansu Kocabaş</strong> <br>
-                        <em>Compec Dev-Team Lideri</em> <br>
-                        <a class="mailFont" href="mailto:cansu.kocabas@leader.compec.org" target="_top">cansu.kocabas@leader.compec.org</a> <br>
+                        <strong>İrem Urhan</strong> <br>
+                        <em>DataCamp Proje Koordinatörü</em> <br>
+                        <a class="mailFont" href="mailto:irem.urhan@leader.compec.org" target="_top">irem.urhan@leader.compec.org</a> <br>
                      <!--   <a href="tel:+905559939410" target="_top">+90 530 965 06 06</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/halil.jpeg" alt="Halil Salih Orhan">
+                        <img src="assets/team/berkay.jpg" alt="Berkay İşler">
                     </div>
                     <div class="text">
-                        <strong>Halil Salih Orhan</strong> <br>
-                        <em>Compec Dev-Team Lideri</em> <br>
-                        <a class="mailFont" href="mailto:salih.orhan@leader.compec.org" target="_top">salih.orhan@leader.compec.org</a> <br>
+                        <strong>Berkay İşler</strong> <br>
+                        <em>DataCamp Proje Koordinatörü</em> <br>
+                        <a class="mailFont" href="mailto:berkay.isler@leader.compec.org" target="_top">berkay.isler@leader.compec.org</a> <br>
                     <!--     <a href="tel:+905316560971" target="_top">+90 531 656 09 71</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/müge.jpeg" alt="Müge Keçeci">
+                        <img src="assets/team/burkay.jpg" alt="Ahmet Burkay Kınık">
                     </div>
                     <div class="text">
-                        <strong>Müge Keçeci</strong> <br>
-                        <em>Compec Dev-Team Lideri</em> <br>
-                        <a class="mailFont" href="mailto:muge.kececi@leader.compec.org" target="_top">muge.kececi@leader.compec.org</a> <br>
+                        <strong>Ahmet Burkay Kınık</strong> <br>
+                        <em>DataCamp Proje Koordinatörü</em> <br>
+                        <a class="mailFont" href="mailto:burkay.kinik@leader.compec.org" target="_top">burkay.kinik@leader.compec.org</a> <br>
                      <!--    <a href="tel:+905071913564" target="_top">+90 507 191 35 64</a>-->  
                     </div>
                 </div>
@@ -299,7 +326,7 @@
                 <img style="width: 30%" src="assets/compec1white.png" alt="Boğaziçi University IT Club">
             </a>
             <p>
-                © 2019 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır®
+                © 2020 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır®
                 <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar.
             </p>
         </div>
