--- a/kayit/index.html
+++ b/kayit/index.html
@@ -155,6 +155,7 @@
                     <h1 style="font-size: 3em; text-align: center;">Bilet Satın Al</h1>
                     <!-- <p class="lead">
                     </p> -->
+                    <!--
                     <div class="programs-container">
                         <div class="program-container" style="text-align: center;">
                             <h3>Bu biletler sadece 24 Kasım'daki zirve içindir.
@@ -164,6 +165,7 @@
                             </h3>
                         </div>
                     </div>
+                    -->
                     <h3>
                         <!-- 1. Dönem biletlerini uygun fiyata alıp etkinliğin keyfini doya
                         doya çıkartabilirsiniz. -->
@@ -237,7 +239,7 @@
                                 aria-expanded="true"
                                 aria-controls="collapseOne"
                             >
-                                Boğaziçi DataCamp'19'a Nasıl kayıt olabilirim?
+                                Boğaziçi DataCamp'20'ye Nasıl kayıt olabilirim?
                             </button>
                         </h2>
                     </div>
@@ -264,7 +266,7 @@
                                 aria-expanded="false"
                                 aria-controls="collapseTwo"
                             >
-                            Boğaziçi DataCamp'19 herkese açık mı, kimler katılabilir?
+                            Boğaziçi DataCamp'20 herkese açık mı, kimler katılabilir?
                             </button>
                         </h2>
                     </div>
@@ -275,7 +277,7 @@
                         data-parent="#accordionExample"
                     >
                         <div class="card-body">
-                                Boğaziçi DataCamp'19 etkinliğine lise, üniversite öğrencileri ve
+                                Boğaziçi DataCamp'20 etkinliğine lise, üniversite öğrencileri ve
                             profesyoneller dahil olmak üzere herkes katılabilir.
                         </div>
                     </div>
@@ -291,7 +293,7 @@
                                 aria-expanded="false"
                                 aria-controls="collapse2"
                             >
-                            Boğaziçi DataCamp'19'a katılanlar sertifika alabiliyor mu,
+                            Boğaziçi DataCamp'20'ye katılanlar sertifika alabiliyor mu,
                                 şartlar nelerdir?
                             </button>
                         </h2>
@@ -389,7 +391,7 @@
                     <img style="width: 30%" src="../assets/compec1white.png" alt="Boğaziçi University IT Club">
                 </a>
                 <p>
-                    © 2019 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır®
+                    © 2020 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır®
                     <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar.
                 </p>
             </div>
