--- a/kayit/index.html
+++ b/kayit/index.html
@@ -365,19 +365,9 @@
                 </div>
             </div>
         </section>
-            <section class="section form" id="registrationForm">
-                <iframe 
-                    id ="registrationFormFrame" 
-                    class="hideform" 
-                    src="https://docs.google.com/forms/d/17T3vdLbClYWTS0Uw-CqC0hWDapVboct2VesLacmbiCQ/viewform?embedded=true" 
-                    style="
-                        width: 100%;
-                        height: 500px;
-                    " 
-                    frameborder="0" 
-                    marginheight="0" 
-                    marginwidth="0">
-                </iframe> 
+            <section >
+                <div class="datacamp_widget" data-subreddit="2020"></div>
+
             </section>
         <section>
             <div class="footer-container container">
@@ -427,5 +417,7 @@
         
         </script>
         <script src="/main.js"></script>
+        <link href="https://datacamp-form-widget.onrender.com/index.css" rel="stylesheet" />
+        <script src="https://datacamp-form-widget.onrender.com/index.js"></script>
     </body>
 </html>
