19'dan 20ye geciste duzeltmeler
ayrica sponsorlari cikarttim

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 <h1 class="hero-title">Boğaziçi DataCamp'20</h1>
                 <div class="header-detail-text">
                     <div style="font-size: 1.1wh;">
-                    <p>Boğaziçi Üniversitesi Bilişim Kulübü Compec tarafından düzenlenen ve bu sene ikinci kez gerçeklesecek olan Boğaziçi DataCamp’e davetlisiniz!</p>
-                    <p>Zirve boyunca veri biliminin iş dünyasındaki güncel uygulamalarını tanırken, workshoplar sırasında uygulamalarını deneyimleyebilceksiniz.</p>
+                    <p>Boğaziçi Üniversitesi Bilişim Kulübü Compec tarafından düzenlenen ve bu sene üçüncü kez gerçekleşecek olan Boğaziçi DataCamp’e davetlisiniz!</p>
+                    <p>Zirve boyunca veri biliminin iş dünyasındaki güncel uygulamalarını tanırken, workshoplar sırasında uygulamalarını deneyimleyebileceksiniz.</p>
                     </div>
                     <div style="font-size: 1.1wh;" style="transform: translateY(10px)">
                         <h3>Etkinliğe Kalan Süre</h3>
@@ -144,7 +144,7 @@
             <div class="why-container">
                 <h2>Boğaziçi DataCamp Nedir?</h2>
                 <p>
-                    Boğaziçi Datacamp veri bilimi ve onun iş dünyasındaki uygulamalarının konuşması ve katılımcıların workshoplarla uygulayarak öğrenmesi üzerine olan bir zirvedir.  </p>
+                    Boğaziçi Datacamp veri bilimi ve onun iş dünyasındaki uygulamalarının konuşmacı ve katılımcıların workshoplarla uygulayarak öğrenmesi üzerine olan bir zirvedir.  </p>
                 <h3>Yer - Tarih</h3>
                 <p>
                     Online<br>
@@ -169,7 +169,7 @@
                     <li>
                         Veri Bilimi’ni projeler ile kariyerinde kullanmak isteyenler </li>
                     <li>
-                        Makine Öğrenmesi, Yapay Zeka, Resim Tanıma gibi Veri Bilimi ile ilişkili terimlerin ne kastettiğini merak edenler içindir.
+                        Makine Öğrenmesi, Yapay Zeka, Görüntü Tanıma gibi Veri Bilimi ile ilişkili terimlerin ne kastettiğini merak edenler içindir.
                     </li>
                 </ul>
             </div>
