--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -64,7 +64,11 @@
             gtag('config', 'UA-128963962-1');
         </script>
     </head>
-    <body>
+    <body style="
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    ">
         <!--Start of Tawk.to Script-->
         <script type="text/javascript">
             var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
