--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                         <h3>Etkinliğe Kalan Süre</h3>
                         <h3 id="countdownTimer"></h3> <!--Kalan süre için 4 Kasım 00:00'ı baz aldım, değiştirmek isterseniz fonksiyon aşağıda. "Nov 4, 2020 00:00:00" şeklinde aratabilirsiniz.-->
                         <h3>4 - 11 Kasım</h3>
-                        <!-- <div class="btn btn-outline-primary">
-                            <a data-scroll href="#registerAll" class="nav-link text-warning font-weight-bold text-wrap" style="font-size: 3rem;">Kayıt için Tıkla!</a>
-                        </div> -->
+                        <div class="btn btn-primary">
+                            <a style="color: white; font-size: 3rem;" href="/kayit/">HEMEN KAYIT OL!</a>
+                        </div>
                     </div>
                 </div>
             </div>
