--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -118,7 +118,15 @@
             <div class="container container-wide">
                 <h1 style="text-align: center;">Sponsorlarımız ve Partnerlerimiz</h1>
                 <div class="partners-container">
-                    <div class="row cooperators2" style="display: flex; align-items: center; justify-content: space-around;">
+                    <div class="row">
+                        <div class="col-md" >
+                            <a href="https://www.kodluyoruz.org/" target="_blank">
+                            <img  src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" ></a>
+
+                        </div>
+
+                    </div>
+                    <div class="row cooperators2" style="display: flex; align-items: center; justify-content: space-around;"></div>
                         <a
                             href="mailto:enes.doke@compec.org?subject=Boğaziçi%20DataCamp%20Partnership&cc=burkay.kinik@leader.compec.org;berkay.isler@leader.compec.org;irem.urhan@leader.compec.org">
                             <h3>Sponsor olmak için bizimle iletişime geçin</h3>
