faqa bir soru ekledim

--- a/kayit/index.html
+++ b/kayit/index.html
@@ -293,6 +293,21 @@
                         <div class="card-header" id="headingTwo">
                             <h2 class="mb-0">
                                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTw" aria-expanded="true" aria-controls="collapseTw">
+                                    DataCamp '20 nasıl gerçekleşecek?
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseTw" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample" style="">
+                            <div class="card-body">
+                                DataCamp '20 online olarak çeşitli platformlarda gerçekleştirilecektir.
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card bg-dark">
+                        <div class="card-header" id="headingTwo">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTw" aria-expanded="true" aria-controls="collapseTw">
                                     Bilet ücretine neler dahil?
                                 </button>
                             </h2>
